<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".Activity.AddTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/topHeadingTitle"
                    android:layout_width="289dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/amaranth_bold"
                    android:gravity="center"
                    android:text="@string/add_task"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/purple_500"
                android:padding="10dp"
                >
                <EditText
                    android:id="@+id/taskNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_task_name"
                    android:paddingStart="10dp"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/edit_text_hint_color"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:background="@color/purple_500"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                >
                <EditText
                    android:id="@+id/taskDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/write_description"
                    android:paddingStart="10dp"
                    android:textSize="18sp"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/edit_text_hint_color"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth_bold"
                    android:text="@string/task_deadline"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/deadlineTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/amaranth"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/calenderBtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_calender"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth_bold"
                    android:text="@string/task_status"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textSize="20sp" />


                <Spinner
                    android:id="@+id/statusSpinner"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/emailLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/amaranth_bold"
                        android:gravity="center"
                        android:text="@string/email_text"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/phoneLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_phone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/amaranth_bold"
                        android:gravity="center"
                        android:text="@string/phone_text"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:id="@+id/urlLinearLayout"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_url" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/amaranth_bold"
                        android:gravity="center"
                        android:text="@string/url_text"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/submitTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_200"
                android:layout_marginTop="30dp"
                android:text="@string/submit_btn_text"
                android:fontFamily="@font/amaranth_bold"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/teal_200"
                />


        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>