<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".Activity.TaskDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/topHeadingTitle"
                    android:layout_width="289dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/amaranth_bold"
                    android:gravity="center"
                    android:text="Task Details"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarTop">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <ImageView
                android:id="@+id/deleteTaskFromDetailsPage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_delete"
                app:tint="@android:color/black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth_bold"
                        android:text="@string/task_created_date"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/taskCreatedDateOnTaskDetailList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/amaranth"
                        android:text="02.11.21"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth_bold"
                        android:text="@string/task_status"
                        android:textColor="@color/task_name_text_color"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/statusOfTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/amaranth"
                        android:text="Status"
                        android:textColor="@color/teal_200"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/taskNameOnDetailsScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="NoteMe Project"
                android:textColor="@color/task_name_text_color"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/taskDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/amaranth"
                android:text="@string/dummyDescription"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth_bold"
                    android:text="@string/task_deadline"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/deadlineOnTaskDetailsScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/amaranth"
                    android:text="02.11.21"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/amaranth_bold"
                        android:gravity="center"
                        android:text="@string/email_text"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/phoneLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_phone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/amaranth_bold"
                        android:gravity="center"
                        android:text="@string/phone_text"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/urlLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_url" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/amaranth_bold"
                        android:gravity="center"
                        android:text="@string/url_text"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editTaskFloatingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="26dp"
        android:src="@drawable/ic_edit"
        app:tint="@android:color/white" />

</RelativeLayout>