<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    app:cardBackgroundColor="@color/purple_500"
    android:layout_marginBottom="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/purple_500"
        android:padding="16dp"
        >

        <!--Task Name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/task_name"
                android:fontFamily="@font/amaranth_bold"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/taskNameOnTaskSingleList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="NoteMe Project"
                android:fontFamily="@font/amaranth_bold"
                android:textSize="20sp"
                android:textColor="@color/task_name_text_color"
                />

        </LinearLayout>

        <!--Created Date-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/task_created_date"
                android:fontFamily="@font/amaranth_bold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/taskCreatedDateOnTaskSingleList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amaranth"
                android:text="02.11.21"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <!--Deadline-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/task_deadline"
                android:textColor="@android:color/black"
                android:fontFamily="@font/amaranth_bold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/taskDeadlineOnTaskSingleList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="22.11.2021"
                android:fontFamily="@font/amaranth"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"
            >

            <ImageView
                android:id="@+id/editTaskFromList"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_edit"
                app:tint="@android:color/black"
                />

            <ImageView
                android:id="@+id/deleteTaskFromList"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_delete"
                app:tint="@android:color/black"
                android:layout_marginStart="24dp"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>